implement workManager along with notification.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -23,6 +23,8 @@ jsonSerializationVersion = "1.7.1"
 calendarVersion = "2.6.0-beta04"
 materialVersion = "1.6.8"
 biometricVersion = "1.2.0-alpha05"
+workVersion = "2.9.1"
+accompanistVersion = "0.35.1-alpha"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -61,6 +63,10 @@ calendar = { group = "com.kizitonwose.calendar", name = "compose", version.ref =
 material-compose = { group = "androidx.compose.material", name = "material" , version.ref = "materialVersion"}
 # biometric
 biometric = { group = "androidx.biometric", name = "biometric", version.ref = "biometricVersion"}
+#work manager
+work-manager = { group = "androidx.work", name = "work-runtime-ktx", version.ref = "workVersion" }
+#permission
+accompanist-permission = { group = "com.google.accompanist", name = "accompanist-permissions", version.ref = "accompanistVersion" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
